@@ -2,12 +2,12 @@
 
 /**
  * Smarty Internal Plugin Compile extend
- * 
+ *
  * Compiles the {extends} tag
- * 
+ *
  * @package Smarty
  * @subpackage compiler
- * @author Uwe Tews 
+ * @author Uwe Tews
  */
 
 /**
@@ -20,7 +20,7 @@ class Smarty_Internal_Compile_Extends extends Smarty_Internal_CompileBase {
 
     /**
      * Compiles code for the {extends} tag
-     * 
+     *
      * @param array $args array with attributes from parser
      * @param object $compiler $compiler object
      * @return string compiled code
@@ -36,14 +36,14 @@ class Smarty_Internal_Compile_Extends extends Smarty_Internal_CompileBase {
         	$compiler->trigger_template_error('nocache option not allowed', $compiler->lex->taglineno);
         }
 
-        $_smarty_tpl = $compiler->template; 
+        $_smarty_tpl = $compiler->template;
         $include_file = null;
         if (strpos($_attr['file'],'$_tmp') !== false) {
         	$compiler->trigger_template_error('illegal value for file attribute', $compiler->lex->taglineno);
         }
-        eval('$include_file = ' . $_attr['file'] . ';'); 
+        eval('$include_file = ' . $_attr['file'] . ';');
         // create template object
-        $_template = new $compiler->smarty->template_class($include_file, $compiler->smarty, $compiler->template); 
+        $_template = new $compiler->smarty->template_class($include_file, $compiler->smarty, $compiler->template);
         // save file dependency
         if (in_array($_template->source->type,array('eval','string'))) {
         	$template_sha1 = sha1($include_file);
@@ -52,13 +52,13 @@ class Smarty_Internal_Compile_Extends extends Smarty_Internal_CompileBase {
     	}
         if (isset($compiler->template->properties['file_dependency'][$template_sha1])) {
             $compiler->trigger_template_error("illegal recursive call of \"{$include_file}\"",$compiler->lex->line-1);
-        } 
+        }
         $compiler->template->properties['file_dependency'][$template_sha1] = array($_template->source->filepath, $_template->source->timestamp,$_template->source->type);
         $_content = substr($compiler->template->source->content,$compiler->lex->counter-1);
         if (preg_match_all("!({$this->_ldl}block\s(.+?){$this->_rdl})!", $_content, $s) !=
                 preg_match_all("!({$this->_ldl}/block{$this->_rdl})!", $_content, $c)) {
             $compiler->trigger_template_error('unmatched {block} {/block} pairs');
-        } 
+        }
         preg_match_all("!{$this->_ldl}block\s(.+?){$this->_rdl}|{$this->_ldl}/block{$this->_rdl}!", $_content, $_result, PREG_OFFSET_CAPTURE);
         $_result_count = count($_result[0]);
         $_start = 0;
@@ -71,19 +71,27 @@ class Smarty_Internal_Compile_Extends extends Smarty_Internal_CompileBase {
                     $_level++;
                 } else {
                     $_level--;
-                } 
-            } 
+                }
+            }
             $_block_content = str_replace($compiler->smarty->left_delimiter . '$smarty.block.parent' . $compiler->smarty->right_delimiter, '%%%%SMARTY_PARENT%%%%',
                 substr($_content, $_result[0][$_start][1] + strlen($_result[0][$_start][0]), $_result[0][$_start + $_end][1] - $_result[0][$_start][1] - + strlen($_result[0][$_start][0])));
             Smarty_Internal_Compile_Block::saveBlockData($_block_content, $_result[0][$_start][0], $compiler->template, $filepath);
             $_start = $_start + $_end + 1;
-        } 
-
+        }
+        if ($_template->source->type == 'extends') {
+            $_template->block_data = $compiler->template->block_data;
+        }
         $compiler->template->source->content = $_template->source->content;
+        if ($_template->source->type == 'extends') {
+            $compiler->template->block_data = $_template->block_data;
+            foreach ($_template->source->components as $key => $component) {
+                $compiler->template->properties['file_dependency'][$key] = array($component->filepath, $component->timestamp,$component->type);
+            }
+        }
         $compiler->template->source->filepath = $_template->source->filepath;
         $compiler->abort_and_recompile = true;
         return '';
-    } 
+    }
 
-} 
+}
 ?>
